# f5-tts-mlx-quantized

./: README.md  pyproject.toml
f5_tts_mlx/: cfm.py  generate.py
