[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts-mlx-quantized"
version = "0.1.1"
authors = [{name = "Alan Dao", email = "contact@alandao.net"}]
license = {text = "MIT"}
description = "F5-TTS - MLX"
readme = "README.md"
keywords = [
    "artificial intelligence",
    "asr",
    "audio-generation",
    "deep learning",
    "transformers",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "einops",
    "einx",
    "jieba",
    "huggingface_hub",
    "mlx>=0.18.1",
    "numpy",
    "pypinyin",
    "setuptools",
    "sounddevice",
    "soundfile",
    "tqdm",
    "vocos-mlx"
]

[project.urls]
Homepage = "https://github.com/tikikun/f5-tts-mlx-quantized"

[tool.setuptools]
packages = ["f5_tts_mlx"]

[tool.setuptools.package-data]
f5_tts_mlx = ["tests/test_en_1_ref_short.wav"]

[project.scripts]
f5-tts-mlx = "f5_tts_mlx.generate:main"
